--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,36 @@
-# Your requirements go here
+astroid==2.7.3
+cachetools==4.2.2
+certifi==2021.5.30
+charset-normalizer==2.0.4
+datatest==0.11.1
+flake8==3.9.2
+google-api-core==2.0.1
+google-api-python-client==2.27.0
+google-auth==2.0.2
+google-auth-httplib2==0.1.0
+google-auth-oauthlib==0.4.6
+googleapis-common-protos==1.53.0
+gspread==4.0.1
+httplib2==0.19.1
+idna==3.2
+isort==5.9.3
+lazy-object-proxy==1.6.0
+mccabe==0.6.1
+oauth2client==4.1.3
+oauthlib==3.1.1
+platformdirs==2.3.0
+protobuf==3.17.3
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycodestyle==2.7.0
+pyflakes==2.3.1
+pylint==2.10.2
+pyparsing==2.4.7
+requests==2.26.0
+requests-oauthlib==1.3.0
+rsa==4.7.2
+six @ file:///AppleInternal/BuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-103/six-1.15.0-py2.py3-none-any.whl
+toml==0.10.2
+uritemplate==3.0.1
+urllib3==1.26.6
+wrapt==1.12.1
